--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>me.atlis</groupId>
     <artifactId>nominatim-api</artifactId>
 
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>Nominatim-API</name>
